# doonlunacy

./: CMakeLists.txt  ChangeLog  README  SConstruct  config.py  config.py.example  config.txt  cutscenes.cfg  cutscenes.dunetxt  data.dunetxt  doxygen.conf  dunelegacy.sln  dunelegacy.vcproj
include/: AdlibPlayer.h  Animation.h  Application.h  BuildItemClass.h  BulletClass.h  CampaignMenu.h  Colours.h  CommViewClass.h  ConcatIterator.h  ConfigFile.h  DataCache.h  DataFile.h  Definitions.h  DrawImage.h  DuneConstants.h  Editor.h  Font.h  FontManager.h  GCObject.h  GameData.h  GameMan.h  GameMenu.h  GameState.h  Gfx.h  HouseChoiceInfoMenu.h  HouseChoiceMenu.h  IntroState.h  Link.h  Log.h  MainMenu.h  MainMenuBase.h  MapClass.h  MapGenerator.h  MapSeed.h  Math.h  MentatClass.h  MentatInfoMenu.h  MentatMenu.h  Menu.h  MenuBase.h  (+29 more)
include/gui/: Button.h  Container.h  Graphics.h  Label.h  Widget.h
include/gui2/: Button.h  Container.h  Counter.h  Frame.h  HScale.h  Label.h  MapWidget.h  SelectionBox.h  VBox.h  Widget.h
include/objects/: AirUnit.h  BuilderClass.h  GroundUnit.h  InfantryClass.h  ObjectClass.h  StructureClass.h  UnitClass.h  WeaponClass.h
include/pakfile/: Animation.h  Cpsfile.h  Icnfile.h  Inifile.h  Pakfile.h  Palette.h  Shpfile.h  StringFile.h  Stringfile.h  Wsafile.h
include/states/: CutSceneState.h  CutSceneState2.h  Editor.h  GameMenu.h  HouseChoiceInfoMenu.h  HouseChoiceMenu.h  IntroState.h  MainMenu.h  MainMenuBase.h  MentatInfoMenu.h  MentatMenu.h  MenuBase.h  OptionsMenu.h  SingleMenu.h  SkirmishGame.h  SkirmishMenu.h  State.h  TopLevelState.h
include/structures/: BarracksClass.h  BuilderClass.h  ConstructionYardClass.h  ConstructionYardClass.h.moved  GunTurretClass.h  HeavyFactoryClass.h  HighTechFactoryClass.h  IXClass.h  LightFactoryClass.h  PalaceClass.h  RadarClass.h  RefineryClass.h  RepairYardClass.h  RocketTurretClass.h  StarPortClass.h  StructureClass.h  WORClass.h  WallClass.h  WindTrapClass.h
include/tests/: pakview.h
include/units/: AirUnit.h  Carryall.h  DevastatorClass.h  FremenClass.h  Frigate.h  GroundUnit.h  InfantryClass.h  QuadClass.h  SardaukarClass.h  SoldierClass.h  TrikeClass.h  TrooperClass.h  UnitClass.h
menu/: doonlunacy.desktop
old/: cutscenes.cfg
old_include/: AiPlayerClass.h  BuildItemClass.h  BulletClass.h  DataFile.h  DuneConstants.h  Editor.h  Game.h  Link.h  ListIterator.h  SDL_rwops_zzip.h  globals.h  gui.h  listStuff.h
old_include/gui/: Box.h  HBox.h  MessageBox.h  VBox.h
old_include/structures/: BuilderClass.h  ConstructionYardClass.h  HighTechFactoryClass.h  IXClass.h  PalaceClass.h  RepairYardClass.h  StarPortClass.h  StructureClass.h  WORClass.h
old_include/units/: DeviatorClass.h  Ornithopter.h  RaiderClass.h  Saboteur.h  SandWorm.h  SiegeTankClass.h  SonicTankClass.h  TrackedUnit.h  TrikeClass.h
old_src/: BuildItemClass.cpp  GameNet.cpp  Link.cpp  LinkedList.cpp  MapClass.cpp  MapGenerator.cpp  Net.cpp  ObjectClass.cpp  PriorityQ.cpp
old_src/gui/: Box.cpp  HBox.cpp  Label.cpp
old_src/structures/: ConstructionYardClass.cpp  (+6 more)
oldinclude/: CutScene.h  GameNet.h  LinkedList.h  MapGenerator.h  MentatClass.h  Net.h  TerrainClass.h  terrainData.h
oldsrc/: AiPlayerClass.cpp  CutScene.cpp  Music.cpp  TerrainClass.cpp  globals.cpp  listStuff.cpp  ui.cpp
python/: AnimationClass.py  CutsceneClass.py  GameDataClass.py  ObjectClass.py  PlayerSideClass.py  SoundClass.py  StructureClass.py  UnitClass.py  WeaponClass.py  animations.py  common.py  cutscenes.py  gamedata.py  music.py  objects.py  playersides.py  settings.py  sounds.py  structures.py  units.py  weapons.py
src/: .sconsign  AdlibPlayer.cpp  Animation.cpp  Application.cpp  BuildItemClass.cpp  BulletClass.cpp  CMakeLists.txt  CampaignMenu.cpp  ConfigFile.cpp  CutScene.cpp  DataCache.cpp  DataFile.cpp  DrawImage.cpp  Editor.cpp  Font.cpp  FontManager.cpp  GCObject.cpp  Game.cpp  GameData.cpp  GameMan.cpp  GameMenu.cpp  GameState.cpp  Gfx.cpp  HouseChoiceInfoMenu.cpp  HouseChoiceMenu.cpp  IntroState.cpp  ListIterator.cpp  Log.cpp  MainMenu.cpp  MainMenuBase.cpp  MapClass.cpp  MapGenerator.cpp  MapSeed.cpp  MentatClass.cpp  MentatInfoMenu.cpp  MentatMenu.cpp  Menu.cpp  MenuBase.cpp  ObjectClass.cpp  ObjectPointer.cpp  (+24 more)
src/gui/: .sconsign  Entry.cpp  Graphics.cpp  Label.cpp  VBox.cpp  Widget.cpp  Window.cpp
src/gui2/: Button.cpp  Container.cpp  Counter.cpp  Frame.cpp  HScale.cpp  Label.cpp  MapWidget.cpp  SelectionBox.cpp  VBox.cpp  Widget.cpp
src/misc/: gamedatautil.cpp  pakview.cpp
src/objects/: AirUnit.cpp  BuilderClass.cpp  GroundUnit.cpp  InfantryClass.cpp  ObjectClass.cpp  StructureClass.cpp  UnitClass.cpp  WeaponClass.cpp
src/pakfile/: Animation.cpp  Cpsfile.cpp  Decode.cpp  Icnfile.cpp  Pakfile.cpp  Palette.cpp  SConscript  Shpfile.cpp  StringFile.cpp  Stringfile.cpp  Vocfile.cpp  Wsafile.cpp  main.cpp
src/pakfile/IntegratedLibSampleRate/: samplerate.c  src_linear.c  src_sinc.c  src_zoh.c
src/pakfile/sound/: Vocfile.cpp  adlwrap.cpp
src/pakfile/sound/IntegratedLibSampleRate/: samplerate.c  src_linear.c  src_sinc.c  src_zoh.c
src/pakfile/sound/adl/: adl.cpp
src/states/: CutSceneState.cpp  CutSceneState2.cpp  Editor.cpp  GameMenu.cpp  HouseChoiceInfoMenu.cpp  HouseChoiceMenu.cpp  IntroState.cpp  MainMenu.cpp  MainMenuBase.cpp  MentatInfoMenu.cpp  MentatMenu.cpp  MenuBase.cpp  OptionsMenu.cpp  SingleMenu.cpp  SkirmishGame.cpp  SkirmishMenu.cpp  State.cpp  TopLevelState.cpp
src/structures/: .sconsign  BarracksClass.cpp  BuilderClass.cpp  ConstructionYardClass.cpp  ConstructionYardClass.cpp.moved  GunTurretClass.cpp  HeavyFactoryClass.cpp  HighTechFactoryClass.cpp  IXClass.cpp  LightFactoryClass.cpp  PalaceClass.cpp  RadarClass.cpp  RefineryClass.cpp  RepairYardClass.cpp  RocketTurretClass.cpp  SiloClass.cpp  StarPortClass.cpp  StructureClass.cpp  WORClass.cpp  WallClass.cpp  WindTrapClass.cpp
src/tests/: pakview.cpp
src/units/: .sconsign  AirUnit.cpp  Carryall.cpp  GroundUnit.cpp  InfantryClass.cpp  QuadClass.cpp  SandWorm.cpp  SoldierClass.cpp  TrackedUnit.cpp  TrikeClass.cpp  UnitClass.cpp
wip/: SConstruct  font.cpp
(+46 files in other folders)
