PROJECT(DOONLUNACY)
SET( CMAKE_MODULE_PATH ${DOONLUNACY_SOURCE_DIR}/cmake/modules )
cmake_minimum_required(VERSION 2.6)


SET(VERSION "0.96")

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g" )

IF( DEFINED CMAKE_INSTALL_PREFIX )
  SET( INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX} )
ELSE( DEFINED CMAKE_INSTALL_PREFIX )
  SET( INSTALL_PREFIX /usr/local )
ENDIF( DEFINED CMAKE_INSTALL_PREFIX )

FIND_PACKAGE(SDL REQUIRED)
IF ( NOT SDL_FOUND)
  MESSAGE( FATAL_ERROR " SDL-devel not found" )
ELSE ( NOT SDL_FOUND)
  INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ENDIF( NOT SDL_FOUND)

FIND_PACKAGE(SDL_mixer REQUIRED)
IF ( NOT SDLMIXER_FOUND)
  MESSAGE( FATAL_ERROR " SDL_mixer-devel not found" )
ELSE ( NOT SDLMIXER_FOUND)
  INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})
ENDIF( NOT SDLMIXER_FOUND)


#FIND_PACKAGE(SDL_net REQUIRED)
#IF ( NOT SDLNET_FOUND)
#  MESSAGE( FATAL_ERROR " SDL_net-devel not found" )
#ELSE ( NOT SDLNET_FOUND)
#  INCLUDE_DIRECTORIES(${SDLNET_INCLUDE_DIR})
#ENDIF( NOT SDLNET_FOUND)

FIND_PACKAGE(LibEastwood REQUIRED)
IF ( NOT LIBEASTWOOD_FOUND)
  MESSAGE( FATAL_ERROR " libeastwood-devel not found" )
ELSE ( NOT LIBEASTWOOD_FOUND)
  INCLUDE_DIRECTORIES(${LIBEASTWOOD_INCLUDE_DIR})
ENDIF( NOT LIBEASTWOOD_FOUND)

FIND_PACKAGE(Boost REQUIRED)
IF (Boost_FOUND)
  MESSAGE( STATUS "boost found: includes in ${Boost_INCLUDE_DIRS}, library in ${Boost_LIBRARY_DIRS}")
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

FIND_PACKAGE(PythonLibs REQUIRED)
IF (PYTHONLIBS_FOUND)
  MESSAGE( STATUS "python found: includes in ${PYTHON_LIBRARY}")
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
ENDIF(PYTHONLIBS_FOUND)




ADD_SUBDIRECTORY( src )

