PROJECT(DOONLUNACY)
SET( PACKAGE "doonlunacy" )
SET( CMAKE_MODULE_PATH ${DOONLUNACY_SOURCE_DIR}/cmake/modules )
cmake_minimum_required(VERSION 2.6)


SET(VERSION "0.96-tp1")

SET(CPACK_PACKAGE_VERSION, "${VERSION}")

SET(CPACK_SOURCE_IGNORE_FILES ".bzr" "build" ".swp$" ".*~" )

SET( CPACK_PACKAGE_NAME, "${PACKAGE}" )
SET( CPACK_SOURCE_GENERATOR "TGZ;TXZ")
SET( CPACK_SOURCE_PACKAGE_FILE_NAME "${PACKAGE}-${VERSION}" )

INCLUDE(CPack)

IF ( DEFINED SHARE_INSTALL_PREFIX )
  SET( DOONLUNACY_GAME_DIR ${SHARE_INSTALL_PREFIX}/games/doonlunacy )
ELSE ( DEFINED SHARE_INSTALL_PREFIX )
  SET( DOONLUNACY_GAME_DIR "." )
ENDIF( DEFINED SHARE_INSTALL_PREFIX )
 
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14 -Wall -pedantic -O0 -Wno-long-long -Wno-variadic-macros -g -DGAME_DIR='\"${DOONLUNACY_GAME_DIR}\"' -DVERSION='\"${VERSION}\"'" )

IF( DEFINED CMAKE_INSTALL_PREFIX )
  SET( INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX} )
ELSE( DEFINED CMAKE_INSTALL_PREFIX )
  SET( INSTALL_PREFIX /usr/local )
ENDIF( DEFINED CMAKE_INSTALL_PREFIX )

SET(SDL_BUILDING_LIBRARY ON)
FIND_PACKAGE(SDL REQUIRED)
IF ( NOT SDL_FOUND)
  MESSAGE( FATAL_ERROR " SDL-devel not found" )
ELSE ( NOT SDL_FOUND)
  INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ENDIF( NOT SDL_FOUND)

FIND_PACKAGE(SDL_mixer REQUIRED)
IF ( NOT SDLMIXER_FOUND)
  MESSAGE( FATAL_ERROR " SDL_mixer-devel not found" )
ELSE ( NOT SDLMIXER_FOUND)
  INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})
ENDIF( NOT SDLMIXER_FOUND)


#FIND_PACKAGE(SDL_net REQUIRED)
#IF ( NOT SDLNET_FOUND)
#  MESSAGE( FATAL_ERROR " SDL_net-devel not found" )
#ELSE ( NOT SDLNET_FOUND)
#  INCLUDE_DIRECTORIES(${SDLNET_INCLUDE_DIR})
#ENDIF( NOT SDLNET_FOUND)

FIND_PACKAGE(LibEastwood REQUIRED)
IF ( NOT LIBEASTWOOD_FOUND)
  MESSAGE( FATAL_ERROR " libeastwood-devel not found" )
ELSE ( NOT LIBEASTWOOD_FOUND)
  INCLUDE_DIRECTORIES(${LIBEASTWOOD_INCLUDE_DIR})
ENDIF( NOT LIBEASTWOOD_FOUND)

SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost COMPONENTS signals python system filesystem REQUIRED)
IF (Boost_FOUND)
  MESSAGE( STATUS "boost found: includes in ${Boost_INCLUDE_DIRS}, library in ${Boost_LIBRARY_DIRS}")
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

FIND_PACKAGE(PythonLibs REQUIRED)
IF (PYTHONLIBS_FOUND)
  MESSAGE( STATUS "python found: includes in ${PYTHON_LIBRARY}")
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
ENDIF(PYTHONLIBS_FOUND)

SET( DOONLUNACY_GAME_PYTHON
  python/AnimationClass.py
  python/CutsceneClass.py
  python/GameDataClass.py
  python/ObjectClass.py
  python/SoundClass.py
  python/StructureClass.py
  python/UnitClass.py
  python/WeaponClass.py
  python/animations.py
  python/common.py
  python/cutscenes.py
  python/gamedata.py
  python/music.py
  python/objects.py
  python/settings.py
  python/sounds.py
  python/structures.py
  python/units.py
  python/weapons.py
)

INSTALL( FILES menu/doonlunacy.desktop DESTINATION ${SHARE_INSTALL_PREFIX}/applications )
INSTALL( FILES menu/16x16/doonlunacy.png DESTINATION ${SHARE_INSTALL_PREFIX}/icons/hicolor/16x16/apps )
INSTALL( FILES menu/32x32/doonlunacy.png DESTINATION ${SHARE_INSTALL_PREFIX}/icons/hicolor/32x32/apps )
INSTALL( FILES menu/48x48/doonlunacy.png DESTINATION ${SHARE_INSTALL_PREFIX}/icons/hicolor/48x48/apps )
INSTALL( FILES menu/64x64/doonlunacy.png DESTINATION ${SHARE_INSTALL_PREFIX}/icons/hicolor/64x64/apps )
INSTALL( FILES ${DOONLUNACY_GAME_PYTHON} DESTINATION ${DOONLUNACY_GAME_DIR}/python )

ADD_SUBDIRECTORY( src )

